--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en"></html>
+
+<!-- This is a comment! -->
+   <head>
+    <link rel="stylesheet" type="text/css" href="style,css" />
+    <title>MARK SAYS "HELLO WORLD"</title>
+   </head>
+  
+   <body>
+
+   </body>
+  
